--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@next/font": "13.1.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "file-loader": "^6.2.0",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "url-loader": "^4.1.1"
   }
 }
